# check-deps

./: .editorconfig  .gitignore  Makefile  README.md  check-deps  entangled.dhall  eval_shell_pass.awk  noweb_label_pass.awk  pyproject.toml
.github/workflows/: main.yml
checkdeps/: __init__.py
example/depends/: dependencies.ini
example/first/: dependencies.ini
example/second/: dependencies.ini
example/template/: dependencies.ini
