[tool.poetry]
name = "check-deps"
version = "0.1.0"
description = "No-extra-deps python script that checks versions of installed software."
authors = ["Johan Hidding <j.hidding@esciencecenter.nl>"]
license = "Apache-2"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pdoc = "^12.3.0"
numpy = "^1.23.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
